Fixed calendar header text overlapping sidebar show/hide button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -313,7 +313,7 @@ footer {
 }
 
 .fc-toolbar.fc-header-toolbar {
-     padding-left: 1em;
+     padding-left: 5em;
  }
 
 .fc-list-item {
